# PlasmaPy

./: .all-contributorsrc  .codecov.yaml  .codecov.yml  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .libcst.codemod.yaml  .mailmap  .pep8speaks.yml  .pre-commit-ci.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml.WITH_INTERROGATE  .pre-commit-search-and-replace.yaml  .readthedocs.yml  .rtd-environment.yml  .sourcery.yaml  .travis.yml  .zenodo.json  1466.doc.rst  2506.bugfix.rst  AGENTS.md  CHANGELOG.rst  CHANGE_LOG.md  CHANGE_LOG.rst  CITATION.cff  CITATION.md  CITATION.rst  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  DatabaseMexico.git  Dockerfile.documentation  INSTALL.md  LICENSE  (+41 more)
.circleci/: config.yml
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  contributing.md  copilot-instructions.md  dependabot.yml  labeler.yml  zizmor.yml
.github/ISSUE_TEMPLATE/:  config.yml  Bug_report.md  Feature_request.md  bug_report.yml  bugreport.yml  feature_request.yml  improve_docs.yml  issue.yml  newfeature.yml  package_improvement.yml  security.yml
.github/content/: README.md  code-review-checklist.md  release-checklist.md  update-requirements-pr-body.md  (+3 more)
.jupyter/: jupyter_notebook_config.py
benchmarks/: __init__.py  benchmark_AtomicSuite.py  benchmark_PhysicsSuite.py
binder/: apt.txt  binder.yml  environment.yml  postBuild  requirements.txt  start  xvfb_bg
changelog/: 1000.feature.rst  1013.trivial.rst  1015.feature.rst  1016.feature.rst  1017.feature.1.rst  1017.feature.2.rst  1017.feature.rst  1025.bugfix.rst  1027.breaking.rst  1027.bugfix.rst  1027.feature.rst  1028.feature.1.rst  1028.feature.2.rst  1028.feature.rst  1029.feature.rst  1035.bugfix.1.rst  1035.bugfix.2.rst  1035.bugfix.3.rst  1035.bugfix.rst  1036.trivial.rst  1039.doc.rst  1039.trivial.rst  1041.doc.rst  1046.breaking.rst  1049.feature.rst  1050.trivial.rst  1052.doc.rst  1054.doc.rst  1054.feature.rst  1057.breaking.1.rst  1057.breaking.2.rst  1057.breaking.rst  1057.feature.1.rst  1057.removal.rst  1057.trivial.1.rst  1057.trivial.2.rst  1057.trivial.3.rst  1058.doc.rst  1059.feature.rst  1062.trivial.1.rst  (+1062 more)
ci_requirements/: README.md  all-3.12-linux.txt  all-3.12-macos.txt  all-3.12-windows.txt  all-3.12.txt  all-3.13-linux.txt  all-3.13-macos.txt  all-3.13-windows.txt  docs-3.12-highest.txt  docs-3.12-linux.txt  docs-3.12-macos.txt  docs-3.12-windows.txt  docs-3.12.txt  docs-3.13-linux.txt  docs-3.13-macos.txt  docs-3.13-windows.txt  requirements_docs_py312.txt  requirements_tests_lowest_direct_py310.txt  requirements_tests_py310.txt  requirements_tests_py311.txt  requirements_tests_py312.txt  tests-3.10-highest.txt  tests-3.10-linux-lowest-direct.txt  tests-3.10-linux.txt  tests-3.10-lowest-direct.txt  tests-3.10-macos-lowest-direct.txt  tests-3.10-macos.txt  tests-3.10-windows-lowest-direct.txt  tests-3.10-windows.txt  tests-3.10.txt  tests-3.11-highest.txt  tests-3.11-linux-lowest-direct.txt  tests-3.11-linux.txt  tests-3.11-lowest-direct.txt  tests-3.11-macos-lowest-direct.txt  tests-3.11-macos.txt  tests-3.11-windows-lowest-direct.txt  tests-3.11-windows.txt  tests-3.11.txt  tests-3.12-highest.txt  (+8 more)
docs/: BROKEN_LINKS  BROKEN_LINKS.txt  CODE_OF_CONDUCT.rst  COMMUNICATION.rst  CONTRIBUTING.rst  CONTRIBUTOR_COVENANT20.md  CONTRIBUTOR_COVENANT_CURRENT.md  Makefile  README.md  README.rst  RHSolver.ipy  _author_list_from_cff.py  _cff_to_rst.py  _changelog_index.py  _global_substitutions.py  _linkcheck_settings.py  autosum_aliases.py  bibliography.bib  bibliography.rst  cff_to_rst.py  common_links.rst  common_links.txt  conf.py  create_module_directory_stub_file.py  example.py  examples.rst  getting_started.rst  glossary.rst  index.rst  install.rst  justify_rst.py  links-to-fix  make.bat  modules.rst  performance_tips.rst  plasma_calculator.sh  refs.bib  requirements.txt  stability.rst  test_api_static.ipynb
lib/: exceptions.py  experiment.py  fusionlib.py  latexutils.py  reactivity.py
licenses/: Astropy_LICENSE.md  LICENSE.md  LICENSE.rst  PlasmaPy_LICENSE_Oct2017_to_Aug2022.md  PlasmaPy_LICENSE_preOct2017.md  README.md  README.rst  SunPy_license.rst  imposter_syndrome_disclaimer_LICENSE.rst  roman_license.rst  sphinx_automodapi_license.rst  sphinx_license.rst  sphinx_rtd_theme_ext_color_contrast_license.txt
neoclassics_archive/: neoclass-profiles.ipynb  neoclassics-B17.ipynb  neoclassics-Copy1.ipynb  neoclassics-geometry.ipynb  neoclassics-pyvista.ipynb  ohshit.ipynb  symbolicequilibrium.ipynb  trapped_fraction.ipynb
notebooks/: ParticlesAroundLoop.ipynb  RHsolver.ipynb  TokamakParticles.ipynb  TokamakParticles.py  TokamakParticlesOtherSolvers.ipynb  VTokamak.py  blogpost.ipynb  plot_cold_plasma_tensor_elements.ipynb  plot_dispersion_function.ipynb  plot_magnetic_statics.ipynb
plasma_calculator/: plasma_calculator.py
plasmapy/: CITATION.rst  README.md  README.rst  __init__.py  _base_init.py  _metadata.py  conftest.py  import_helpers.py  optional_deps.py  plasma.py  setup_package.py  travis-testing.txt  version.py
requirements/: automated-code-tests.txt  automated-documentation-tests.txt  base.txt  build.txt  dev_version_hack.sh  docs.txt  environment.txt  environment.yml  extra_contraints_minimal.txt  extras.txt  install.txt  requirements.txt  requirements_docs_py312.txt  requirements_py310_minimal.txt  requirements_py310_tests.txt  requirements_py310_tests_minimal.txt  requirements_py311.txt  requirements_py311_tests.txt  requirements_py312.txt  requirements_py312_docs.txt  requirements_tests_lowest_direct_py310.txt  requirements_tests_minimal_py310.txt  requirements_tests_py310.txt  requirements_tests_py311.txt  requirements_tests_py312.txt  tests.txt
scripts/: ParticleTrackerProfiling.py
src/: formulary.rs  lib.rs
styles/: medium.mplstyle
tests/: Checks of reactivity values.ipynb  README.md  __init__.py  conftest.py  test_version.py
tools/: README.md  __init__.py  export_ionization_energy.py  ionization_energy.json
type_stubs/: README.md  wrapt.pyi
(+1747 files in other folders)
